@@ -1,5 +1,15 @@
 2019-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
+	mailbox-imap: Declare it final
+
+	Use G_DECLARE_FINAL_TYPE to declare LibBalsaMailboxImap
+
+	No new accessors needed.
+
+	* libbalsa/mailbox_imap.h:
+
+2019-07-05  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
 	mailbox-remote: declare it derivable
 
 	Use G_DECLARE_DERIVABLE_TYPE to declare LibBalsaMailboxRemote
